Make the first version of the project
This one ended up being quicker than I thought. I will implement the
functionalities of the extra credits soon.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/dist/script.js" defer></script>
 </head>
 <body>
+    <button class="divs_number_button">Number of squares in row</button>
     <div class="container"></div>
 </body>
 </html>
